feat(resources): add styles, resources and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">AndroidBaseTemplate</string>
+    <string name="app_name">TemplateApp</string>
+    <string name="toolbar_title">TemplateApp</string>
+    <string name="home_title">Menú principal</string>
+    <string name="product_list_title">Listado de productos</string>
 </resources>
