feat(top-app-bar): add top app bar for home and product list screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="toolbar_title">TemplateApp</string>
     <string name="home_title">Menú principal</string>
     <string name="product_list_title">Listado de productos</string>
+    <string name="search_title">Buscar</string>
+    <string name="menu_drawer_btn">Menú drawer</string>
 </resources>
