--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TemplateApp</string>
     <string name="toolbar_title">TemplateApp</string>
     <string name="home_title">Menú principal</string>
-    <string name="product_list_title">Listado de productos</string>
+    <string name="pokemon_list_title">Pokedex</string>
     <string name="search_title">Buscar</string>
     <string name="menu_drawer_btn">Menú drawer</string>
 </resources>
