feat(settings-screen): allow enable or disable dark mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="stat_special_attack">S. Atk</string>
     <string name="stat_special_defense">S. Def</string>
     <string name="empty_string">""</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
