--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="dark_mode">Dark Mode</string>
     <string name="common_accept">Aceptar</string>
     <string name="common_cancel">Cancelar</string>
+    <string name="about">About</string>
 </resources>
