refactor(i18n): translate strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">TemplateApp</string>
     <string name="toolbar_title">TemplateApp</string>
     <string name="pokedex_title">Pokedex</string>
-    <string name="pokemon_list_title">Listado</string>
-    <string name="favorites_title">Favoritos</string>
+    <string name="pokemon_list_title">List</string>
+    <string name="favorites_title">Favourites</string>
     <string name="settings_title">Settings</string>
     <string name="pokemon_detail_title">Detail</string>
     <string name="search_title">Search</string>
@@ -17,8 +17,8 @@
     <string name="stat_special_attack">S. Atk</string>
     <string name="stat_special_defense">S. Def</string>
     <string name="empty_string">""</string>
-    <string name="dark_mode">Dark Mode</string>
-    <string name="common_accept">Aceptar</string>
-    <string name="common_cancel">Cancelar</string>
+    <string name="dark_mode">Dark mode</string>
+    <string name="common_accept">Accept</string>
+    <string name="common_cancel">Cancel</string>
     <string name="about">About</string>
 </resources>
