feat(search-bar): implement pokemon search logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="common_accept">Accept</string>
     <string name="common_cancel">Cancel</string>
     <string name="about">About</string>
+    <string name="data_not_found">Pokemon Not Found</string>
 </resources>
