--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="about">About</string>
     <string name="data_not_found">Pokemon Not Found</string>
     <string name="common_save">Save</string>
+    <string name="pokemon_photo">Photo</string>
+    <string name="pokemon_name">Name</string>
+    <string name="insert_name">Add name</string>
+    <string name="add_photo">Add image URL</string>
 </resources>
