--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,4 +32,5 @@
     <string name="language">Language</string>
     <string name="stats">Stats</string>
     <string name="moves">Moves</string>
+    <string name="pokemon_added_to_team">¡Pokemon añadido al equipo!</string>
 </resources>
