--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,4 +32,5 @@
     <string name="language">Idioma</string>
     <string name="stats">Estadísticas</string>
     <string name="moves">Movimientos</string>
+    <string name="pokemon_added_to_team">¡Pokemon añadido al equipo!</string>
 </resources>
