--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,6 +18,7 @@
     <string name="stat_special_defense">S. Def</string>
     <string name="empty_string">""</string>
     <string name="dark_mode">Dark mode</string>
+    <string name="dark_mode_description">Choose between dark and light mode to adapt the application appearance to your preferences.</string>
     <string name="common_accept">Accept</string>
     <string name="common_cancel">Cancel</string>
     <string name="about">About</string>
