--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,6 +18,7 @@
     <string name="stat_special_defense">S. Def</string>
     <string name="empty_string">""</string>
     <string name="dark_mode">Modo oscuro</string>
+    <string name="dark_mode_description">Elige entre el modo oscuro o claro para adaptar la apariencia de la aplicación a tus preferencias.</string>
     <string name="common_accept">Aceptar</string>
     <string name="common_cancel">Cancelar</string>
     <string name="about">Sobre</string>
