--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
     <string name="language">Language</string>
     <string name="stats">Stats</string>
     <string name="moves">Moves</string>
-    <string name="pokemon_added_to_team">¡Pokemon added to team!</string>
+    <string name="pokemon_added_to_team">¡Pokemon joined to team!</string>
     <string name="app_error_title">Error</string>
 </resources>
